# agentbox

./: .gitignore  LICENSE  README.de.md  README.fr.md  README.md  README.ru.md  README.zh-CN.md  pyproject.toml
agentbox/: __init__.py
agentbox/api/: app.py  deps.py
agentbox/api/routers/: agents.py  health.py  owners.py  secrets.py  settings.py
agentbox/cli/: _helpers.py  agent.py  config_cmd.py  main.py  owner.py  secret.py
agentbox/core/: config.py  ids.py  paths.py
agentbox/db/: database.py
agentbox/models/: __init__.py  agent.py  owner.py  secret.py  settings.py
agentbox/schemas/: __init__.py  agent.py  owner.py  secret.py  settings.py
agentbox/services/: agents.py  errors.py  owners.py  secrets.py  settings.py
demo/sirius1024/: README.md
docs/: acceptance-demo.md  architecture-principles.md  implementation-brief.md  implementation-prompt.md  mvp-spec.md  safety-rules.md  spec.md  vision.md
prompts/: 00-build-from-scratch.md  01-core-crud.md  02-podman-runtime.md  03-hermes-runtime.md  04-lifecycle-backup.md  05-web-console.md
prompts/variants/: claude-code.md  codex.md  kimi-code.md  minimal.md
runtimes/hermes/: Containerfile
runtimes/openclaw/: Containerfile
tests/: conftest.py  test_api_agents.py  test_api_auth.py  test_api_health.py  test_api_owners.py  test_api_settings_secrets.py  test_cli.py  test_core_paths.py
web/: README.md
