[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbox"
version = "0.1.0"
description = "AgentBox: a lightweight multi-agent management platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentBox maintainers" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "PyYAML>=6.0",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agentbox = "agentbox.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentbox*"]
exclude = ["tests*", "web*", "runtimes*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
